--- a/stukbook/app/assets/stylesheets/pages.scss
+++ b/stukbook/app/assets/stylesheets/pages.scss
@@ -3,5 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
-	padding-top: 70px;
+	padding-top: 50px;
+}
+
+.alert {
+	position: absolute;
+	z-index: 1;
+	width: 200px;
 }
