--- a/stukbook/app/views/layouts/_header.html.erb
+++ b/stukbook/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Stukbook", root_path, class: "navbar-brand" %>
+      <%= link_to "Lykesbook", root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -26,7 +26,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= gravatar_tag current_user.email, size: 20 %><%= current_user.username %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Profile</a></li>
+            <li><%= link_to "Profile", user_path(current_user.username) %></li>
             <li><a href="#">Friends</a></li>
             <li><%= link_to "Settings", edit_user_registration_path %></li>
             <li class="divider"></li>
