Finishing touches before production

--- a/stukbook/app/assets/stylesheets/pages.scss
+++ b/stukbook/app/assets/stylesheets/pages.scss
@@ -1,3 +1,4 @@
+// (22 sloc)  529 Bytes
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
@@ -10,4 +11,17 @@ body {
 	position: absolute;
 	z-index: 1;
 	width: 200px;
+}
+
+.front-title {
+	margin-top: 100px;
+}
+
+.landing { 
+  background: image-url("wallpaper.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
 }
