--- a/stukbook/app/views/activities/index.html.erb
+++ b/stukbook/app/views/activities/index.html.erb
@@ -11,6 +11,8 @@
 
 	<% @activities.each_with_index do |activity| %>
 
+	<% @activities.each_with_index do |activity| %>
+	<% unless activity.trackable_type == "Friendship" && activity.owner == current_user %>
 	<% if activity.trackable %>
 
 	<% if cycle('odd','even') == 'odd' %>
@@ -34,7 +36,8 @@
 	</div>
 
 	<% end %>
-
+	<% end %>
+	<% end %>
 	<% end %>
 
 	</ul>
